stderr
JudgeMan.java:106: error: int cannot be dereferenced
        return pairJudge(hand).equals("Two Pair");
                              ^
1 error
